EVALSYS-1338 Tick mark no longer gets cut off
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/branches/unicon-ucb@81012 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/tool/src/webapp/content/css/evaluation_base.css
+++ b/tool/src/webapp/content/css/evaluation_base.css
@@ -810,6 +810,9 @@ label.blockItemLabel:hover {
 
 .itemDoneCheckShow {
   background: url(../images/tick.png) center left no-repeat;
+  display: inline-block;
+  height: 16px;
+  width: 16px;
 }
 
 .blockItemHeaderHilite {
